fixing overflow 8

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ nav ul li a:hover {
         transform: translate(0, 0);
     }
     50% {
-        transform: translate(50px, 50px);
+        transform: translate(10px, 10px);
     }
     100% {
         transform: translate(0, 0);
